# Ruckig_otg_planner

./: .gitignore  ARCHITECTURE.en.md  ARCHITECTURE.md  README.en.md  README.md  package.xml  setup.cfg  setup.py
docs/: GITHUB_ABOUT.md
docs/images/: planner_state_machine.dot  planner_state_machine.mmd  runtime_dataflow.dot  runtime_dataflow.mmd
otg_planner/: __init__.py  demo_client_node.py  obstacle_scenario_node.py  planner_server.py  planning_core.py  ros_utils.py  ruckig_node.py
otg_planner/config/: controllers.yaml
otg_planner/launch/: simulation.launch.py
otg_planner/urdf/: panda.urdf.xacro
scripts/: check_sim_health.sh  spawn_controllers.sh
test/: test_planning_core.py  test_ros_utils.py
